# pbsf-lib

./: .gitignore  LICENSE  README.md  pyproject.toml
eval/ucr/: benchmark.py  main.py
src/pbsf/: __init__.py
src/pbsf/algorithms/: __init__.py  distance_profile.py  hpm.py  matrix_profile.py
src/pbsf/chains/: __init__.py  base.py
src/pbsf/discretisers/: __init__.py  base.py  paa.py  pla.py  sax.py  sum.py
src/pbsf/models/: __init__.py  base.py  nw_set.py  pattern_graph.py  pattern_set.py  pattern_tree.py
src/pbsf/nodes/: __init__.py  base.py  paa_node.py  pla_node.py  sax_node.py  slope_sign_node.py  structural_prominence_node.py  sum_node.py
src/pbsf/segmenters/: __init__.py  base.py  sliding_window.py
src/pbsf/utils/: __init__.py  digraph.py  layered_digraph.py  nested_word.py  validation.py  visualise.py
src/pbsf/utils/acceptors/: __init__.py  acceptors.py  bidfa.py  dfa.py  haa.py
src/pbsf/utils/sets/: __init__.py  poset.py
src/pbsf/utils/words/: __init__.py  nested_word.py  word.py
tests/algorithms/: test_hpm.py  test_matrix_profile.py
tests/chains/: __init__.py  test_chain.py
tests/discretisers/: test_discretisers.py
tests/models/: test_models.py
tests/nodes/: test_paa_node.py  test_sax_node.py  test_slope_sign_node.py  test_structural_prominence_node.py  test_sum_node.py
tests/segmenters/: test_sliding_window.py
tests/utils/acceptors/: test_bidfa.py  test_dfa.py  test_haa.py
tests/utils/sets/: test_poset.py
tests/utils/words/: test_nested_word.py  test_word.py
