[project]
name = "pbsf-lib"
version = "0.1.0"
description = "A Python framework for pattern-based sequence learning using hierarchical piecewise approximation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bidict>=0.23.1",
    "graphviz>=0.21",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "scipy>=1.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pbsf"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "python-lsp-server>=1.14.0",
    "ruff>=0.15.2",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
